# shieldbom

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/shieldbom-cli/: Cargo.toml
crates/shieldbom-cli/src/: cli.rs  main.rs
crates/shieldbom-cli/tests/fixtures/: sample.cdx.json
crates/shieldbom-core/: Cargo.toml
crates/shieldbom-core/src/: lib.rs  models.rs
crates/shieldbom-core/src/license/: mod.rs
crates/shieldbom-core/src/parser/: mod.rs  spdx.rs
crates/shieldbom-core/src/report/: mod.rs
crates/shieldbom-core/src/vuln/: nvd.rs
crates/shieldbom-server/: Cargo.toml
crates/shieldbom-server/src/: db.rs  errors.rs  main.rs
crates/shieldbom-server/src/routes/: auth.rs  mod.rs  scans.rs
examples/: README.md  smart-gateway-firmware.cdx.json  smart-gateway-firmware.spdx.json
src/: cli.rs  errors.rs  main.rs  models.rs
src/db/: mod.rs
src/license/: mod.rs
src/parser/: cyclonedx.rs  mod.rs  spdx.rs
src/report/: mod.rs
src/vuln/: mod.rs  nvd.rs  osv.rs
tests/fixtures/: sample.spdx.json
