[package]
name = "shieldbom"
version = "0.1.0"
edition = "2021"
description = "SBOM vulnerability scanner and license checker for embedded/IoT software"
license = "Apache-2.0"
repository = "https://github.com/kazumaxwell1117/shieldbom"
keywords = ["sbom", "spdx", "cyclonedx", "vulnerability", "embedded"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Output
tabled = "0.15"
colored = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Package URL
packageurl = "0.3"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
