[package]
name = "shieldbom-cli"
description = "CLI for ShieldBOM — SBOM vulnerability scanner and license checker for embedded/IoT software"
keywords = ["sbom", "spdx", "cyclonedx", "vulnerability", "embedded"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "shieldbom"
path = "src/main.rs"

[dependencies]
shieldbom-core = { workspace = true }
clap = { workspace = true }
tabled = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
